gcc/testsuite/rust/rustc/ui/parser/bad-value-ident-false.rs
fn false() { } // { dg-error "" "" { target *-*-* } }
fn main() { }

